edition = "2023";

package proto.stack.v1;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/endobit/gen/go/proto/stack/v1;stackv1";



//
// Create
//

message CreateNetworkRequest {
  string zone = 1;
  string name = 2;
}

//
// Read
//

message ReadNetworksRequest {
  string zone = 1;
  oneof network {
	string name = 2;
	string glob = 3;
  }
}

message ReadNetworksResponse {
  string zone = 1;
  string name = 2;
  string address = 3;
  string gateway = 4;
  bool pxe = 5;
  uint32 mtu = 6;
}

//
// Update
//

message UpdateNetworkRequest {
  message Fields {
    string zone = 1;
    string name = 2;
    string address = 3;
    string gateway = 4;
    bool pxe = 5;
    uint32 mtu = 6;
  }

  string zone = 1;
  string name = 2;
  Fields fields = 3;
}

//
// Delete
//

message DeleteNetworksRequest {
  string zone = 1;
  oneof network {
	string name = 2;
	string glob = 3;
  }
}

